# magix

./: Changelog.org  Readme.org  cabal.project  cabal.project.freeze  flake.nix  magix.cabal
.github/workflows/: haskell.yml  test.yml
app/: Main.hs
scripts/: check  freeze
src/: Magix.hs
src/Magix/: Build.hs  BuildMode.hs  Config.hs  Directives.hs  Env.hs  Expression.hs  FlakeTemplate.nix  Hash.hs  Language.hs  NixpkgsPath.hs  Options.hs  Paths.hs  Run.hs
src/Magix/Directives/: Common.hs
src/Magix/Language/: Directives.hs  Expression.hs  Language.hs
src/Magix/Language/Bash/: Directives.hs  Expression.hs  Template.nix
src/Magix/Language/Common/: Directives.hs  Expression.hs
src/Magix/Language/Haskell/: Directives.hs  Expression.hs
src/Magix/Language/Python/: Directives.hs  Expression.hs
src/Magix/Languages/: Directives.hs  Expression.hs  Language.hs
src/Magix/Languages/Bash/: Directives.hs  Expression.hs
src/Magix/Languages/Common/: Directives.hs  Expression.hs
src/Magix/Languages/Haskell/: Directives.hs  Expression.hs  Template.nix
src/Magix/Languages/Python/: Directives.hs  Expression.hs  Template.nix
test-scripts/bash/: hello-flake  minimal
test-scripts/haskell/: hello-flake  minimal
test-scripts/python/: hello-flake
test/Magix/: DirectivesSpec.hs  NixpkgsPathSpec.hs  Tools.hs
test/Magix/Directives/: CommonSpec.hs
test/Magix/Language/: Tools.hs
test/Magix/Language/Bash/: DirectivesSpec.hs  ExpressionSpec.hs
test/Magix/Language/Common/: DirectivesSpec.hs
test/Magix/Language/Haskell/: DirectivesSpec.hs  ExpressionSpec.hs
test/Magix/Language/Python/: DirectivesSpec.hs  ExpressionSpec.hs
test/Magix/Languages/: DirectivesSpec.hs  Tools.hs
test/Magix/Languages/Bash/: DirectivesSpec.hs  ExpressionSpec.hs
test/Magix/Languages/Common/: DirectivesSpec.hs
test/Magix/Languages/Haskell/: DirectivesSpec.hs  ExpressionSpec.hs
test/Magix/Languages/Python/: DirectivesSpec.hs  ExpressionSpec.hs
