cabal-version:      3.4
name:               magix
version:            0.6.0.0
synopsis:
  Build, cache, and run possibly compiled scripts with dependencies using the Nix package manager

description:
  Please see the README at <https://github.com/dschrempf/magix#readme>

category:           Nix, Package Management, Scripting
homepage:           https://github.com/dschrempf/magix#readme
bug-reports:        https://github.com/dschrempf/magix/issues
author:             Dominik Schrempf
maintainer:         dominik.schrempf@gmail.com
copyright:          2024 Dominik Schrempf
license:            GPL-3.0-or-later
license-file:       License.txt
build-type:         Simple
extra-doc-files:
  Changelog.org
  Readme.org

extra-source-files:
data-files:
  src/Magix/FlakeTemplate.nix
  src/Magix/Language/Bash/Template.nix
  src/Magix/Language/Haskell/Template.nix
  src/Magix/Language/Python/Template.nix

source-repository head
  location: https://github.com/dschrempf/magix
  type:     git

common common
  default-extensions:
    DuplicateRecordFields
    OverloadedRecordDot
    OverloadedStrings

common lib
  default-language: GHC2024
  ghc-options:      -Wall -Werror -Wunused-packages -Wredundant-constraints

common test
  default-language: GHC2024
  ghc-options:      -Wall -Werror -Wunused-packages -Wredundant-constraints

common bench
  default-language: GHC2024
  ghc-options:      -Wall -Werror -Wunused-packages -Wredundant-constraints

common exec
  default-language: GHC2024
  ghc-options:      -Wall -Werror -Wunused-packages -Wredundant-constraints

library
  import:          common, lib
  exposed-modules:
    Magix
    Magix.Build
    Magix.BuildMode
    Magix.Config
    Magix.Directives
    Magix.Env
    Magix.Expression
    Magix.Hash
    Magix.Language.Bash.Directives
    Magix.Language.Bash.Expression
    Magix.Language.Common.Directives
    Magix.Language.Common.Expression
    Magix.Language.Directives
    Magix.Language.Expression
    Magix.Language.Haskell.Directives
    Magix.Language.Haskell.Expression
    Magix.Language.Language
    Magix.Language.Python.Directives
    Magix.Language.Python.Expression
    Magix.NixpkgsPath
    Magix.Options
    Magix.Paths
    Magix.Run

  hs-source-dirs:  src
  other-modules:   Paths_magix
  autogen-modules: Paths_magix
  ghc-options:
  build-depends:
    , base                  >=4.7 && <5
    , bytestring
    , cryptohash-sha256
    , directory
    , filelock
    , filepath
    , hslogger
    , megaparsec
    , optparse-applicative
    , process
    , text
    , unix
    , xdg-basedir

executable magix
  import:          common, exec
  main-is:         Main.hs
  hs-source-dirs:  app
  other-modules:
  autogen-modules:
  ghc-options:
  build-depends:
    , ansi-terminal
    , base           >=4.7 && <5
    , bytestring
    , directory
    , filepath
    , hslogger
    , magix
    , text

test-suite test-magix
  import:             common, test
  main-is:            Spec.hs
  hs-source-dirs:     test
  other-modules:
    Magix.BuildSpec
    Magix.DirectivesSpec
    Magix.Language.Bash.DirectivesSpec
    Magix.Language.Bash.ExpressionSpec
    Magix.Language.Common.DirectivesSpec
    Magix.Language.Haskell.DirectivesSpec
    Magix.Language.Haskell.ExpressionSpec
    Magix.Language.Python.DirectivesSpec
    Magix.Language.Python.ExpressionSpec
    Magix.Language.Tools
    Magix.NixpkgsPathSpec
    Magix.Tools

  autogen-modules:
  ghc-options:
  type:               exitcode-stdio-1.0
  build-depends:
    , base        >=4.7 && <5
    , bytestring
    , directory
    , filepath
    , hspec
    , magix
    , megaparsec
    , random
    , text
    , unix

  build-tool-depends: hspec-discover:hspec-discover
